# tku_msgs

./: CMakeLists.txt  package.xml
msg/: ButtonColorForm.msg  CameraProperty.msg  ColorArray.msg  DrawData.msg  HSVValue.msg  HeadPackage.msg  MotorAction.msg  ObjectList.msg  Parameter.msg  SaveMotion.msg  SensorPackage.msg  SensorSet.msg  SingieMotorAction.msg  Walking.msg
msg/segmention/: ColorObjects.msg  ObjectInfo.msg  ObjectList.msg
srv/: CameraPropertySrv.srv  ExecuteSector.srv  HSVInfo.srv  ReadMotion.srv  SaveHSV.srv  WalkingGaitParameter.srv
